--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
-  "type": "module",
   "author": "",
   "license": "ISC",
   "dependencies": {
     "colors": "^1.4.0",
     "inquirer": "^8.2.4",
+    "socket.io": "^4.5.1",
     "yargs": "^17.5.1"
   },
   "repository": {
